[DPEDE-4798] Style bug fixes for Narnia components (#1719)
* Narnia Style Improvements

- Fixed style bug in Card KPI hover state
- Fixed Tag padding, height, and vertical text alignment
- Fixed Icon Button padding to ensure icon buttons render with the same height as text buttons. This also fixed the misalignment of icon buttons within inputs like search input, etc.
- Fixed XL button font-size and line-height which caused XL buttons to render smaller than LG buttons.

* Changed time picker and date picker styles

* [DPEDE-4798] Add visual tests

---------

--- a/src/chi/components/tags/tags.scss
+++ b/src/chi/components/tags/tags.scss
@@ -41,6 +41,11 @@
         padding-bottom: $tag-badge-padding-bottom;
         padding-top: $tag-badge-padding-top;
 
+        & > span {
+          display: flex;
+          align-items: center;
+        }
+
         .chi-button {
           &.-icon {
             &.-close {
@@ -56,12 +61,13 @@
     align-items: center;
     display: flex;
     flex: 1 0 auto;
-    min-height: $line-height-xl;
+    min-height: $tags-input-min-height;
 
     input {
       border: 0;
       height: 100%;
       outline: none;
+      padding: 0;
       width: 100%;
 
       &::placeholder {
